[gd_scene load_steps=52 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Run.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/wallCling.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/wallCling2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Fall.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Jump.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Panting.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/wallCling2_oneleg.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/wallCling_oneleg.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Crawling.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Crawl.png" type="Texture" id=12]
[ext_resource path="res://Items/WandRenderSprite.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/Player/RunLookback.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Particles/fire.png" type="Texture" id=15]
[ext_resource path="res://Entities/InputController.gd" type="Script" id=16]
[ext_resource path="res://HUDControl.gd" type="Script" id=17]
[ext_resource path="res://Entities/DiscordStatusUpdate.gd" type="Script" id=18]
[ext_resource path="res://Entities/PlayerProperties.gd" type="Script" id=19]
[ext_resource path="res://AchievementGiver.gd" type="Script" id=20]
[ext_resource path="res://CameraController.gd" type="Script" id=21]
[ext_resource path="res://WandCaster.gd" type="Script" id=22]
[ext_resource path="res://Entities/SoulJittering.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 10.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 15 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 15 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 22, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 44, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 66, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 88, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 11 )
region = Rect2( 110, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 7, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 14, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 21, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 18, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 54, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 90, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 14 )
region = Rect2( 18, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 14 )
region = Rect2( 36, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 14 )
region = Rect2( 54, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 14 )
region = Rect2( 72, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 14 )
region = Rect2( 90, 0, 18, 22 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "crawling",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "oneleg_slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "oneleg_slide2",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "panting",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "run_lookback",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "slide2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 38
script = ExtResource( 1 )
controller_path = NodePath("InputController")
properties_path = NodePath("PlayerProperties")

[node name="InputController" type="Node" parent="."]
script = ExtResource( 16 )

[node name="HUDControl" type="Node" parent="."]
script = ExtResource( 17 )

[node name="DiscordUpdater" type="Node" parent="."]
script = ExtResource( 18 )

[node name="PlayerProperties" type="Node" parent="."]
script = ExtResource( 19 )

[node name="AchievementGiver" type="Node" parent="."]
script = ExtResource( 20 )

[node name="CameraController" type="Node" parent="."]
script = ExtResource( 21 )

[node name="WandCaster" type="Node" parent="."]
script = ExtResource( 22 )
properties_path = NodePath("../PlayerProperties")
controller_path = NodePath("../InputController")

[node name="SoulJittering" type="Node" parent="."]
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -4, 0 )
collision_mask = 2

[node name="Right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 4, 0 )
collision_mask = 2

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -9 )
scale = Vector2( 0.75, 1 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="Player" type="AnimatedSprite" parent="."]
frames = SubResource( 28 )
playing = true

[node name="WandRender" parent="." instance=ExtResource( 13 )]
position = Vector2( 15, -17 )

[node name="CastDirection" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 26, -26 )
collision_mask = 74

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Listener2D" type="Listener2D" parent="."]
current = true

[connection signal="frame_changed" from="Player" to="." method="_on_frame_changed"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
